# ukui-kwin

./: CMakeLists.txt  COPYING  KWinDBusInterfaceConfig.cmake.in  Mainpage.dox  Messages.sh  README.md  abstract_client.cpp  abstract_client.h  abstract_opengl_context_attribute_builder.h  abstract_output.h  abstract_wayland_output.h  activation.cpp  activities.h  appmenu.cpp  appmenu.h  atoms.h  composite.cpp  composite.h  config-ukui-kwin.h.cmake  cursor.cpp  cursor.h  dbusinterface.cpp  dbusinterface.h  debug_console.h  deleted.h  effectloader.cpp  effectloader.h  effects.h  egl_context_attribute_builder.h  events.cpp  gestures.h  globalshortcuts.cpp  input.h  input_event_spy.h  internal_client.h  keyboard_input.h  kwinbindings.cpp  layers.cpp  linux_dmabuf.h  logind.cpp  (+61 more)
autotests/: CMakeLists.txt  fakeeffectplugin.json  fakeeffectplugin_version.json  test_builtin_effectloader.cpp  test_plugin_effectloader.cpp  test_scripted_effectloader.cpp  test_virtualkeyboard_dbus.cpp  test_x11_timestamp_update.cpp
colorcorrection/: colorcorrectdbusinterface.cpp  colorcorrectdbusinterface.h  manager.cpp  manager.h
data/: CMakeLists.txt  LowPerformanceCPU.list  LowVgaPci.list  ukui-kwin.desktop  ukui-kwinrc  update_default_rules.cpp
data/icons/: CMakeLists.txt
debian/: changelog  control  copyright  libukui-kwin4-effect-builtins1.install  libukui-kwineffects12.install  libukui-kwinglutils12.install  libukui-kwinxrenderutils12.install  rules  ukui-kwin-common.install  ukui-kwin-common.lintian-overrides  ukui-kwin-common.maintscript  ukui-kwin-common.manpages  ukui-kwin-data.install  ukui-kwin-data.lintian-overrides  ukui-kwin-data.qml-ignore  ukui-kwin-dev.acc.in  ukui-kwin-dev.install  ukui-kwin-wayland-backend-drm.install  ukui-kwin-wayland-backend-fbdev.install  ukui-kwin-wayland-backend-virtual.install  ukui-kwin-wayland-backend-wayland.install  ukui-kwin-wayland-backend-x11.install  ukui-kwin-wayland.install  ukui-kwin-wayland.lintian-overrides  watch  (+7 more)
effects/fade/: CMakeLists.txt
effects/fade/package/: metadata.desktop
effects/fadedesktop/: CMakeLists.txt
effects/fadedesktop/package/: metadata.desktop
effects/ubr/: CMakeLists.txt  main.cpp  shaderhelper.cpp  shaderhelper.h  ubr.desktop  ubr.json  ubr_config.desktop  ubrconfig.cpp  ubrconfig.h  ubrconfig.ui  ubreffect.cpp  ubreffect.h  ubrtexturehelper.cpp  ubrtexturehelper.h  xatom-helper.cpp  xatom-helper.h
helpers/killer/: CMakeLists.txt  killer.cpp
kcmkwin/common/: CMakeLists.txt  effectsmodel.cpp  effectsmodel.h
kcmkwin/kwincompositing/: CMakeLists.txt  Messages.sh  compositing.cpp  compositing.h  ukuikwincompositing.desktop
kcmkwin/kwindecoration/: CMakeLists.txt  Messages.sh  kcm.cpp  ukuikwindecoration.desktop  ukuikwindecorationsettings.kcfg  ukuikwindecorationsettings.kcfgc
kcmkwin/kwindecoration/declarative-plugin/: CMakeLists.txt  plugin.cpp  previewbridge.cpp  qmldir
kcmkwin/kwindecoration/package/: metadata.desktop
kcmkwin/kwindecoration/package/contents/ui/: ButtonGroup.qml  Buttons.qml  Themes.qml
kcmkwin/kwindesktop/: CMakeLists.txt  Messages.sh  animationsmodel.cpp  desktopsmodel.cpp  kcm_ukuikwin_virtualdesktops.desktop  ukuivirtualdesktopssettings.kcfg  ukuivirtualdesktopssettings.kcfgc  virtualdesktops.cpp
kcmkwin/kwindesktop/package/: metadata.desktop
kcmkwin/kwineffects/: CMakeLists.txt  Messages.sh  kcm.cpp  kcm_ukuikwin_effects.desktop  ukui-kwineffect.knsrc
kcmkwin/kwineffects/package/: metadata.desktop
kcmkwin/kwineffects/package/contents/ui/: main.qml
kcmkwin/kwinoptions/: CMakeLists.txt  Messages.sh  main.cpp  mouse.cpp  ukuikwinactions.desktop  ukuikwinadvanced.desktop  ukuikwinfocus.desktop  ukuikwinmoving.desktop  ukuikwinoptions.desktop  windows.cpp
kcmkwin/kwinscreenedges/: CMakeLists.txt  Messages.sh  main.cpp  touch.cpp  ukuikwinscreenedges.desktop  ukuikwintouchscreen.desktop
kcmkwin/kwinscripts/: CMakeLists.txt  Messages.sh  main.cpp  module.cpp  ukui-kwinscripts.knsrc  ukuikwinscripts.desktop
kcmkwin/kwintabbox/: CMakeLists.txt  Messages.sh  layoutpreview.cpp  main.cpp  thumbnailitem.cpp  ukui-kwinswitcher.knsrc  ukuikwintabbox.desktop
plugins/kdecorations/aurorae/src/: CMakeLists.txt  aurorae.cpp  aurorae.json  decorationplugin.cpp  decorationplugin.h  ukuikwindecoration.desktop
plugins/kdecorations/aurorae/src/lib/: themeconfig.cpp  themeconfig.h
plugins/kdecorations/aurorae/src/qml/: AppMenuButton.qml  AuroraeButton.qml  AuroraeButtonGroup.qml  AuroraeMaximizeButton.qml  ButtonGroup.qml  Decoration.qml  DecorationButton.qml  MenuButton.qml  aurorae.qml  qmldir
plugins/kdecorations/aurorae/themes/plastik/: CMakeLists.txt
plugins/kdecorations/aurorae/themes/plastik/code/: CMakeLists.txt  plastikplugin.cpp  plastikplugin.h  qmldir
plugins/kdecorations/aurorae/themes/plastik/package/: metadata.desktop
plugins/kdecorations/aurorae/themes/plastik/package/contents/ui/: PlastikButton.qml  main.qml
plugins/kdecorations/ukui/: CMakeLists.txt  README.md  breezeboxshadowrenderer.cpp  breezeboxshadowrenderer.h  button.cpp  button.h  icon.qrc  kwin-style-ukui.json  shadow-helper.cpp  shadow-helper.h  ukui-decoration.cpp  ukui-decoration.h  xatom-helper.cpp  xatom-helper.h
plugins/kdecorations/ukui/src/: CMakeLists.txt  button.cpp  button.h  shadow-helper.cpp  shadow-helper.h  ukui-decoration.cpp  ukui-decoration.h  xatom-helper.cpp  xatom-helper.h
plugins/kdecorations/ukui/src/test/: test-csd.cpp
plugins/kdecorations/ukui/test/: test-csd.cpp
plugins/kglobalaccel/: CMakeLists.txt  kglobalaccel_plugin.h  kwin.json
plugins/kpackage/aurorae/: CMakeLists.txt  aurorae.cpp  ukui-kwin-packagestructure-aurorae.desktop
plugins/kpackage/decoration/: CMakeLists.txt  decoration.cpp  ukui-kwin-packagestructure-decoration.desktop
plugins/kpackage/effect/: CMakeLists.txt  effect.cpp  ukui-kwin-packagestructure-effect.desktop
plugins/kpackage/scripts/: CMakeLists.txt  scripts.cpp  ukui-kwin-packagestructure-scripts.desktop
plugins/kpackage/windowswitcher/: CMakeLists.txt  ukui-kwin-packagestructure-windowswitcher.desktop  windowswitcher.cpp
(+206 files in other folders)
